build-logs/build-hopfli-0.2.2.1.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - hopfli-0.2.2.1 (lib) (first run)
 - hopfli-0.2.2.1 (test:test) (first run)
Configuring library for hopfli-0.2.2.1...
Preprocessing library for hopfli-0.2.2.1...
Building library for hopfli-0.2.2.1...
[1 of 2] Compiling Codec.Compression.Hopfli.Raw
[2 of 2] Compiling Codec.Compression.Hopfli
src/cbits/deflate.c: In function ‘OptimizeHuffmanForRle’:

src/cbits/deflate.c:452:24: error:
     warning: argument 1 range [18446744065119617024, 18446744073709551612] exceeds maximum object size 9223372036854775807 [-Walloc-size-larger-than=]
      452 |   good_for_rle = (int*)malloc(length * sizeof(int));
          |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
    |
452 |   good_for_rle = (int*)malloc(length * sizeof(int));
    |                        ^
In file included from src/cbits/lz77.h:28,
                 from src/cbits/deflate.h:28,

                 from src/cbits/deflate.c:20:0: error: 

/usr/include/stdlib.h:540:14: error:
     note: in a call to allocation function ‘malloc’ declared here
      540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
          |              ^~~~~~
    |
540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
    |              ^
src/cbits/deflate.c: In function ‘OptimizeHuffmanForRle’:

src/cbits/deflate.c:452:24: error:
     warning: argument 1 range [18446744065119617024, 18446744073709551612] exceeds maximum object size 9223372036854775807 [-Walloc-size-larger-than=]
      452 |   good_for_rle = (int*)malloc(length * sizeof(int));
          |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
    |
452 |   good_for_rle = (int*)malloc(length * sizeof(int));
    |                        ^
In file included from src/cbits/lz77.h:28,
                 from src/cbits/deflate.h:28,

                 from src/cbits/deflate.c:20:0: error: 

/usr/include/stdlib.h:540:14: error:
     note: in a call to allocation function ‘malloc’ declared here
      540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
          |              ^~~~~~
    |
540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
    |              ^
Configuring test suite 'test' for hopfli-0.2.2.1...
Preprocessing test suite 'test' for hopfli-0.2.2.1...
Building test suite 'test' for hopfli-0.2.2.1...
[1 of 2] Compiling HopfliSpec
[2 of 2] Compiling Main
[3 of 3] Linking /tmp/workdir-hopfli/hopfli-0.2.2.1/dist-newstyle/build/x86_64-linux/ghc-9.6.6/hopfli-0.2.2.1/t/test/build/test/test
